turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:34: error: ')' expected but '}' found.
        }
        ^